CH3 : amélioration exemple f calculable (x occurences successives de pi)

--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -490,6 +490,6 @@ Finalement, l'hypothèse du continu stipule que $\beth_1 = \aleph_1$, c'est-à-d
 \label{sec:concept_conclusion}
 
 Les ensembles énumérables sont importants pour la suite du cours. En
-informatique, on ne considère que les ensembles énumérables. En effet, on constate que l'univers des programmes (Java ou autres) est énumérable (voir propriété \ref{prop:programme_enumerable}), alors que l'univers des problèmes (fonction de $\N$ dans $\N$) est non-énumérables (voir propriété \ref{exem:fNN}).
+informatique, on ne considère que les ensembles énumérables. En effet, on constate que l'univers des programmes (Java ou autres) est énumérable (voir propriété \ref{prop:programme_enumerable}), alors que l'univers des problèmes (fonction de $\N$ dans $\N$) est non-énumérables (voir exemple \ref{exem:fNN}).
 On ne peut donc forcément pas faire correspondre un programme à chaque problème et on en conclut donc qu'un grand nombre de problèmes ne sont pas calculables.
 % section concepts (end)
