--- a/05_Analyse.tex
+++ b/05_Analyse.tex
@@ -14,8 +14,8 @@ La forme originale ne contient que 2 parties :
 		calculable par une MT
 \end{enumerate}
 La partie 1 est démontrée et la 2 est supposée vraie.
-On la suppose vraie, car on a des évidences heuristiques (il y a eu beaucoup
-d'essais pour trouver une fonction qui ne respectait pas la thèse) et qu'on a montré
+On la suppose vraie, parce qu'on a des évidences heuristiques (il y a eu beaucoup
+d'essais pour trouver une fonction qui ne respectait pas la thèse) et parce qu'on a montré
 l'équivalence entre tous les formalismes créés à ce jour (on a montré que toute
 machine constructible par la mécanique de Newton ne calcule que des fonctions
 calculables).
@@ -25,7 +25,7 @@ calculables).
 \label{sub:formalismes_de_la_calculabilit_}
 On va se poser la question de ce qui fait un bon formalisme de la
 calculabilité. Il faut un formalisme qui vérifie les fondements de la
-thèse... Plus précisément, on va étudier des caractéristiques (des propriétés)
+thèse. Plus précisément, on va étudier des caractéristiques (des propriétés)
 nécessaires et suffisantes pour avoir un bon modèle de la calculabilité.
 
 \paragraph{} Dans ce chapitre, on va considérer un formalisme de la
@@ -70,10 +70,10 @@ calculabilité D.
 		respectant SA produit une description de programme $d \in D$ tel que
 		$p$ et $d$ calculent la même fonction.
 	\item[U]  L'interpréteur de D est D-calculable (sinon on sait par
-		Hoare Allison que ce n'est pas un formalisme complet).
-	\item[S] Il existe un transformateur de programme calculable, qui
+		Hoare-Allison que ce n'est pas un formalisme complet).
+	\item[S] Il existe un transformateur de programme calculable, qui,
 		recevant comme entrée un programme $d \in$ D à 2 arguments et une valeur
-		$x$ fournit comme résultat un programme $d'$ tel que $d'(y)$ calcule
+		$x$, fournit comme résultat un programme $d'$ tel que $d'(y)$ calcule
 		la même fonction que $d(x,y)$.
 		% checker si d' dans D!!!
 \end{description}
@@ -123,7 +123,7 @@ Pour prouver qu'un problème est non calculable, on peut utiliser :
 	\item Le théorème de Rice
 	\item La démonstration directe de la non-calculabilité par
 		diagonalisation ou par preuve par l'absurde.
-		\textbf{A priori le plus dur!} C'est plus pratique de réutiliser les problèmes pour
+		\textbf{A priori le plus dur !} C'est plus pratique de réutiliser les problèmes pour
 		lesquels on a déjà montré la non-calculabilité.
 	\item La méthode de réduction
 \end{itemize}
@@ -175,4 +175,5 @@ raisonnement :
 
 % subsection au_del_de_la_calculabilit_ (end)
 % section analyse_de_la_t_se_de_chu ch_Turin (end)
+
 
