--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -263,7 +263,7 @@ La figure \ref{Salade} illustre le diagramme d'état de cette énigme.
 	\label{Salade}
 \end{figure}
 
-Un autre exemple d'automates finis est un distributeur de boissons qui reçoit une pièce d'argent et un choix de boissons puis sert la boisson choisie. Par exemple, nous pouvons considères que la machine recois une pièce de 2 euros et a uniquement trois choix Fanta, Coca, Eau. Un tel système peut être modélisé comme suit:\\
+Un autre exemple d'automate fini est un distributeur de boissons qui reçoit une pièce d'argent et un choix de boisson puis sert la boisson choisie. Par exemple, nous pouvons considérer que la machine reçoit une pièce de 2 euros et a uniquement trois choix Fanta, Coca, Eau. Un tel système peut être modélisé comme suit:\\
 
 \begin{figure}
 	\centering
